agregue transicion al logo del menu

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,7 +57,7 @@
              <label for="Mensaje">Mensaje</label>
              <input type="text" id="Mensaje">
         </div>
-        <div>
+        <div class="box box1">
             <input type="submit" value="Enviar">
         </div>
             
