Agregue mas texto a la seccion1 de mi index

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <!-- INICIO DEL HEADER -->
     <header class="header">
         <!-- ---------------------------------------logo del menú------------------------------------------------ -->
-            <a href="index.html"><img src="./img/logo_thot_producciones.png" alt="logothotproducciones" class="logo"></a>
+        <a href="index.html"><img src="./img/logo_thot_producciones.png" alt="logothotproducciones" class="logo"></a>
         <nav class="header__menu">
             <!-- -----------------------------páginas del menú------------------------------------>
-            <ul>
+            <ul class="menu">
                 <li><a href="./pages/servicios.html">SERVICIOS</a></li>
                 <li><a href="./pages/empresa.html">EMPRESA</a></li>
                 <li><a href="./pages/proyectos.html">PROYECTOS</a></li>
@@ -43,13 +43,11 @@
         </nav>
     </header>
     <!-- FINAL DEL HEADER -->
-    < <!---------------------------------------PRIMERA SECCIÓN------------------------------------------->
+    <!---------------------------------------PRIMERA SECCIÓN------------------------------------------->
         <section class="primeraSeccion">
             <!-------------------------------------video presentación---------------------------->
-            <div>
                 <video src="./img/Animacion THOT.mp4" alt="videoPresentacion" autoplay muted width="1300" height="800"
                     class="videoPresentacion"></video>
-            </div>
             <!-- -----------------------------título presentación-------------------------------->
             <div class="primeraSeccion__titulo">
                 <h1>VOLVEMOS REALIDAD TUS IDEAS</h1>
@@ -59,6 +57,12 @@
                 <p> Somos productores de contenidos audiovisuales y <strong> ayudamos a marcas personales, profesionales
                         y emprendedores a desarrollar, planificar, producir y editar videos </strong> para redes
                     sociales y plataformas digitales, en las diferentes etapas de producción.</p>
+                <p> Podemos ofrecerte los siguientes servicios: 
+                        <li>👉Asesoría en Producción de videos.</li>
+                        <li>👉Producción de Identidad Gráfica para tus videos.</li>
+                        <li>👉Animaciones e ilustraciones personalizadas para tus proyectos.</li>
+                        <li>👉Y servicios de edición y posproducción del material audiovisual.</li>
+                    </p>
             </div>
         </section>
         <!-- ------------------------------------SEGUNDA SECCIÓN------------------------------------------- -->
