--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
                 <li><a href="./servicios.html">SERVICIOS</a></li>
                 <li><a href="./empresa.html">EMPRESA</a></li>
                 <li><a href="./proyectos.html">PROYECTOS</a></li>
-                <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                <li><a href="./contacto.html">CONTACTO</a></li>
             </ul>
             <!-- -----------------------------redes sociales del menú----------------------------->
         </nav>
