--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="./servicios.html">SERVICIOS</a></li>
                 <li><a href="./empresa.html">EMPRESA</a></li>
-                <li><a href="./pages/proyectos.html">PROYECTOS</a></li>
+                <li><a href="./proyectos.html">PROYECTOS</a></li>
                 <li><a href="./contacto.html">CONTACTO</a></li>
             </ul>
             <!-- -----------------------------redes sociales del menú----------------------------->
