--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -31,7 +31,7 @@
         <nav class="header__menu">
             <!-- -----------------------------páginas del menú------------------------------------>
             <ul>
-                <li><a href="./pages/servicios.html">SERVICIOS</a></li>
+                <li><a href="./servicios.html">SERVICIOS</a></li>
                 <li><a href="./empresa.html">EMPRESA</a></li>
                 <li><a href="./proyectos.html">PROYECTOS</a></li>
                 <li><a href="./contacto.html">CONTACTO</a></li>
