--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400&family=Vollkorn:ital,wght@0,400;0,500;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/95394413ce.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
      <!-- CSS externo -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
