--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -18,7 +18,7 @@
     <!-- CSS bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- CSS externo -->
+    <!-- Nuestro CSS externo -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -49,41 +49,49 @@
         <div>
             <img src="../img/banner_thot_producciones.png" alt="banner_thot_producciones" class="banner">
         </div>
-        <section>
-            <div class="grillaServicios">
-                <div class="h1">
-                    <h1>NUESTROS SERVICIOS</h1>
+        <h1 class="mt-5 ms-4 tituloServicios">NUESTROS SERVICIOS</h1>
+        <div class="container">
+            <div class="row row-cols-2 mx-5">
+              <figure class="Imagen__Servicios Imagen__Servicios--img1" >
+                <img src="../img/edicion.png" alt="Edicion">
+                <div class="capa">
+                    <h3>VER MAS INFO</h3>
                 </div>
-                <div class="img">
-                    <img class="imagenEdicion" src="../img/edicion.png" alt="edicion" width="500" height="400">
+              </figure>
+              <figure class="Imagen__Servicios Imagen__Servicios--img2">
+                <img src="../img/IdentidadGrafica.png" alt="IdentidadGrafica">
+                <div class="capa">
+                    <h3>VER MAS INFO</h3>
                 </div>
-                <div class="p">
-                    <p class="parrafoEdicion"> ¿Ya tenes tus videos grabados pero no sabes editar o no tenes tiempo?
-                        Nosotros realizamos el trabajo de edición y posproducción de tus videos adaptándonos a las
-                        necesidades de tu proyecto de forma completamente personalizada.</p>
+              </figure>
+              <figure class="Imagen__Servicios Imagen__Servicios--img3">
+                <img src="../img/Ilustracion.png" alt="Ilustracion">
+                <div class="capa">
+                    <h3>VER MAS INFO</h3>
                 </div>
-                <div class="h2">
-                    <h2>¿Qué incluye nuestro servicio de edición de videos?</h2>
+              </figure>
+              <figure class="Imagen__Servicios Imagen__Servicios--img4">
+                <img src="../img/asesoria.png" alt="Asesoria">
+                <div class="capa">
+                    <h3>VER MAS INFO</h3>
                 </div>
-                <div class="p2">
-                    <p>Montaje y sincronización de archivos (video y audio).
-                        Edición y compilación de videos con transiciones y cortes.
-                        Correcciones y nivelaciones de audio.
-                        Corrección de color.
-                        Musicalización y efectos de sonido.
-                        Suma de elementos visuales: Imágenes, textos, dibujos, gráficos, infografia, etc.</p>
-                </div>
-            </div>
-
-
-
-
-        </section>
-        <section>
-
-
-        </section>
+              </figure>
     </main>
+    <footer class="footer">
+        <!--------------------------------------redes sociales-------------------------------------------------->
+        <ul>
+            <nav>
+                <li><a href="https://www.instagram.com/th0tproducciones">INSTAGRAM</a></li>
+                <li><a href="https://www.facebook.com/th0tproducciones">FACEBOOK</a></li>
+                <li><a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ">YOUTUBE</a></li>
+            </nav>
+        </ul>
+        <!-- -------------------------------------copyright----------------------------------------------------->
+        &copy;2021thotproducciones
+    </footer>
+    <!-- FINAL DEL FOOTER -->
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
