--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1>VOLVEMOS REALIDAD TUS IDEAS</h1>
             </div>
             <!-- -----------------------------párrafo presentación-------------------------------->
-            <div class="primeraSeccion__parrafo">
+            <div class="primeraSeccion__parrafo m-5">
                 <p> Somos productores de contenidos audiovisuales y <strong> ayudamos a marcas personales, profesionales
                         y emprendedores a desarrollar, planificar, producir y editar videos </strong> para redes
                     sociales y plataformas digitales, en las diferentes etapas de producción.</p>
@@ -100,6 +100,8 @@
             &copy;2021thotproducciones
         </footer>
         <!-- FINAL DEL FOOTER -->
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
