Agregue mas info a la pagina servicios y animaciones al menu

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -53,25 +53,62 @@
               <figure class="Imagen__Servicios Imagen__Servicios--img1" >
                 <img src="../img/edicion.png" alt="Edicion">
                 <div class="capa">
-                    <h3>VER MAS INFO</h3>
+                    <h3>Edición y Posproducción de Videos.</h3>
+                    <H5>¿Ya tenes tus videos grabados pero no sabes editar o no tenes tiempo?</H5>
+                    <li>Edición y compilación de videos con transiciones y cortes.</li>
+                    <li>Montaje y sincronización de archivos (video y audio).</li>
+                    <li>Correcciones y nivelaciones de audio.</li>
+                    <li>Corrección de color.</li>
+                    <li>Musicalización y efectos de sonido.</li>   
+                    <li>Elementos visuales: Imágenes, textos, dibujos, gráficos, infografia, etc.</li>
+                    <nav>
+                        <a href="./edicion.html"></a>
+                    </nav>
+                    
                 </div>
               </figure>
               <figure class="Imagen__Servicios Imagen__Servicios--img2">
                 <img src="../img/IdentidadGrafica.png" alt="IdentidadGrafica">
                 <div class="capa">
-                    <h3>VER MAS INFO</h3>
+                    <h3>Identidad Gráfica</h3>
+                    <h5>¿Estas necesitando darle una personalidad a tu  marca y mostrarte más profesional frente a tu audiencia?</h5>
+                        <li>Banner de presentación de canal.</li>
+                        <li>Introducción animada.</li>
+                        <li>Animación de logo.</li>
+                        <li>Transiciones.</li>
+                        <li>Botones de redes sociales.</li>
+                        <li>Tercios inferiores.</li>
+                        <li>Botones animados: “Me gusta”, “Subscribirse”, “Campanita”.</li>
+                        <li>Plantilla para miniaturas.</li>
+                        <li>Outro (pantalla final).</li>
                 </div>
               </figure>
               <figure class="Imagen__Servicios Imagen__Servicios--img3">
                 <img src="../img/Ilustracion.png" alt="Ilustracion">
                 <div class="capa">
-                    <h3>VER MAS INFO</h3>
+                    <h3>Animaciones e Ilustraciones Personalizadas.</h3>
+                    <h5>En nuestro equipo contamos  con un ilustrador y animador profesional, que va ayudarte a darle vida a ese proyecto que anda dando vueltas en tu cabeza hace tiempo y que ya es momento de mostrárselo al mundo. </h5>
+                    <li>Construcción y animación de personajes.</li>
+                    <li>Cuentos animados. </li>
+                    <li>Stop Motion.</li>
+                    <li>Animación de gráficos.</li>
+                    <li>Avatares personalizados</li>
+                    <li>Stickers Personalizados</li>
                 </div>
               </figure>
               <figure class="Imagen__Servicios Imagen__Servicios--img4">
                 <img src="../img/asesoria.png" alt="Asesoria">
                 <div class="capa">
-                    <h3>VER MAS INFO</h3>
+                    <h3> Asesoría en Producción de Video.</h3>
+                    <h5>Sabes que queres empezar a crear contenido en video e incluso tenes claro de tematicas vas a hablar pero ¿no sabes muy bien por donde empezar?</h5>
+                    <li>Te vamos a guiar para que puedas armar tus propios guiones.</li>
+                    <li>Armar un cronograma/plan de grabación.</li>
+                    <li>Definir tu escena de grabación y que detalles tenes que tener en cuenta.</li>
+                    <li>Propuesta estética.</li>
+                    <li>Equipos básicos de grabación.</li>
+                    <li>Composición básica para tus videos.</li>
+                    <li>Planillas de producción. (Descargable).</li>
+                    <li>Organización de archivos de video y audio.</li>
                 </div>
               </figure>
     </main>
