--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+
     <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400&family=Vollkorn:ital,wght@0,400;0,500;1,400&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&family=Vollkorn:ital,wght@1,400;1,500;1,900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/95394413ce.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS -->
-     <!-- CSS externo -->
+    <!-- CSS bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Nuestro CSS externo -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <!-- INICIO DEL HEADER -->
-    <header class="header">
-        <!-- ---------------------------------------logo del menú------------------------------------------------ -->
-        <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones" class="logo"></a>
-        <nav class="header__menu">
-            <!-- -----------------------------páginas del menú------------------------------------>
-            <ul>
-                <li><a href="./servicios.html">SERVICIOS</a></li>
-                <li><a href="./empresa.html">EMPRESA</a></li>
-                <li><a href="./proyectos.html">PROYECTOS</a></li>
-                <li><a href="./contacto.html">CONTACTO</a></li>
-            </ul>
-            <!-- -----------------------------redes sociales del menú----------------------------->
-        </nav>
-        <nav class="header__redesSociales">
-            <a href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i>
-            <a href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a>
-        </nav>
+    <header class="container-fluid header">
+        <!-- barra de navegacion -->
+        <nav class="navbar navbar-expand-sm navbar-light border-3 header__menu">
+            <div class="container-fluid">
+                <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones" class="navbar-brand header__logo"></a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegable">
+                    <span class="navbar-toggler-icon bg-light"></span>
+                </button>
+                <div id="menuNavegable" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ms-3 header__link--paginas">
+                        <li class="nav-item"><a class="nav-link" href="./servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./empresa.html">EMPRESA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./proyectos.html">PROYECTOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTO</a></li>
+                    </ul>
+                    <ul class="navbar-nav ms-3 header__link--redesSociales">
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>        
     </header>
-    <!-- FINAL DEL HEADER -->
     <main>
         <form>
         <div>
@@ -71,6 +79,8 @@
             <a href="https://www.facebook.com/th0tproducciones">YOUTUBE</a>
         </nav>
         &copy;2021thotproducciones
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </footer>
 </body>
 </html>
