--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -21,26 +21,34 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-        <!-- INICIO DEL HEADER -->
-        <header class="header">
-            <!-- ---------------------------------------logo del menú------------------------------------------------ -->
-            <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones" class="logo"></a>
-            <nav class="header__menu">
-                <!-- -----------------------------páginas del menú------------------------------------>
-                <ul>
-                    <li><a href="./servicios.html">SERVICIOS</a></li>
-                    <li><a href="./empresa.html">EMPRESA</a></li>
-                    <li><a href="./proyectos.html">PROYECTOS</a></li>
-                    <li><a href="./contacto.html">CONTACTO</a></li>
-                </ul>
-                <!-- -----------------------------redes sociales del menú----------------------------->
-            </nav>
-            <nav class="header__redesSociales">
-                <a href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i>
-                <a href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a>
-            </nav>
-        </header>
-        <!-- FINAL DEL HEADER -->
+    <!-- INICIO DEL HEADER -->
+    <header class="container-fluid header">
+        <!-- barra de navegacion -->
+        <nav class="navbar navbar-expand-sm navbar-light border-3 header__menu">
+            <div class="container-fluid">
+                <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones" class="navbar-brand header__logo"></a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegable">
+                    <span class="navbar-toggler-icon bg-light"></span>
+                </button>
+                <div id="menuNavegable" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ms-3 header__link--paginas">
+                        <li class="nav-item"><a class="nav-link" href="./servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./empresa.html">EMPRESA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./proyectos.html">PROYECTOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTO</a></li>
+                    </ul>
+                    <ul class="navbar-nav ms-3 header__link--redesSociales">
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>        
+    </header>
+    <footer>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </footer>
 </body>
 </html>
