--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -24,27 +24,30 @@
 
 <body>
     <!-- INICIO DEL HEADER -->
-    <header class="header">
-        <!-- ---------------------------------------logo del menú------------------------------------------------ -->
-        <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones"
-                class="logo"></a>
-        <nav class="header__menu">
-            <!-- -----------------------------páginas del menú------------------------------------>
-            <ul>
-                <li><a href="./servicios.html">SERVICIOS</a></li>
-                <li><a href="./empresa.html">EMPRESA</a></li>
-                <li><a href="./proyectos.html">PROYECTOS</a></li>
-                <li><a href="./contacto.html">CONTACTO</a></li>
-            </ul>
-            <!-- -----------------------------redes sociales del menú----------------------------->
-        </nav>
-        <nav class="header__redesSociales">
-            <a href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i>
-            <a href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a>
-        </nav>
+    <header class="container-fluid header">
+        <!-- barra de navegacion -->
+        <nav class="navbar navbar-expand-sm navbar-light border-3 header__menu">
+            <div class="container-fluid">
+                <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones" class="navbar-brand header__logo"></a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegable">
+                    <span class="navbar-toggler-icon bg-light"></span>
+                </button>
+                <div id="menuNavegable" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ms-3 header__link--paginas">
+                        <li class="nav-item"><a class="nav-link" href="./servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./empresa.html">EMPRESA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./proyectos.html">PROYECTOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTO</a></li>
+                    </ul>
+                    <ul class="navbar-nav ms-3 header__link--redesSociales">
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>        
     </header>
-    <!-- FINAL DEL HEADER -->
     <main>
         <img src="../img/banner_thot_producciones.png" alt="banner_thot_producciones" class="banner">
         <h1 class="mt-5 ms-4 tituloServicios">NUESTROS SERVICIOS</h1>
