agregue un variable tamanio ancho

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 <video src="./img/Animacion THOT.mp4" alt="videoPresentacion" autoplay muted
                     class="videoPresentacion"></video>
             <!-- -----------------------------título presentación-------------------------------->
-            <div class="primeraSeccion__titulo">
+            <div class="primeraSeccion__titulo container-fluid">
                 <h1>VOLVEMOS REALIDAD TUS IDEAS</h1>
             </div>
             <!-- -----------------------------párrafo presentación-------------------------------->
-            <div class="primeraSeccion__parrafo m-5">
+            <div class="primeraSeccion__parrafo m-5 container-fluid">
                 <p> Somos productores de contenidos audiovisuales y <strong> ayudamos a marcas personales, profesionales
                         y emprendedores a desarrollar, planificar, producir y editar videos </strong> para redes
                     sociales y plataformas digitales, en las diferentes etapas de producción.</p>
@@ -71,7 +71,7 @@
             </div>
         </section>
         <!-- ------------------------------------SEGUNDA SECCIÓN------------------------------------------- -->
-        <div class="grillaSegundaSeccion">
+        <div class="grillaSegundaSeccion container-fluid">
             <div class="h2">
                 <h2> ÚLTIMO LANZAMIENTO</h2>
             </div>
