pase los archivos img png a formato jpg y mv4

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!---------------------------------------PRIMERA SECCIÓN------------------------------------------->
         <section class="primeraSeccion container-fluid">
             <!-------------------------------------video presentación---------------------------->
-                <video src="./img/Animacion THOT.mp4" alt="videoPresentacion" autoplay muted
+                <video src="./img/Animacion_thot.m4v" alt="videoPresentacion" autoplay muted
                     class="videoPresentacion"></video>
             <!-- -----------------------------título presentación-------------------------------->
             <div class="primeraSeccion__titulo container-fluid">
