--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -49,12 +49,12 @@
         </nav>        
     </header>
     <main>
-        <img src="../img/banner_thot_producciones.png" alt="banner_thot_producciones" class="banner">
+        <img src="../img/banner_thot_producciones.jpg" alt="banner_thot_producciones" class="banner">
         <h1 class="mt-5 ms-4 tituloServicios">NUESTROS SERVICIOS</h1>
         <div class="container">
             <div class="row row-cols-2 mx-5">
               <figure class="Imagen__Servicios Imagen__Servicios--img1" >
-                <img src="../img/edicion.png" alt="Edicion">
+                <img src="../img/edicion.jpg" alt="Edicion">
                 <div class="capa">
                     <h3>Edición y Posproducción de Videos.</h3>
                     <H5>¿Ya tenes tus videos grabados pero no sabes editar o no tenes tiempo?</H5>
@@ -63,15 +63,11 @@
                     <li>Correcciones y nivelaciones de audio.</li>
                     <li>Corrección de color.</li>
                     <li>Musicalización y efectos de sonido.</li>   
-                    <li>Elementos visuales: Imágenes, textos, dibujos, gráficos, infografia, etc.</li>
-                    <nav>
-                        <a href="./edicion.html"></a>
-                    </nav>
-                    
+                    <li>Elementos visuales: Imágenes, textos, dibujos, gráficos, infografia, etc.</li>                    
                 </div>
               </figure>
               <figure class="Imagen__Servicios Imagen__Servicios--img2">
-                <img src="../img/IdentidadGrafica.png" alt="IdentidadGrafica">
+                <img src="../img/IdentidadGrafica.jpg" alt="IdentidadGrafica">
                 <div class="capa">
                     <h3>Identidad Gráfica</h3>
                     <h5>¿Estas necesitando darle una personalidad a tu  marca y mostrarte más profesional frente a tu audiencia?</h5>
@@ -87,7 +83,7 @@
                 </div>
               </figure>
               <figure class="Imagen__Servicios Imagen__Servicios--img3">
-                <img src="../img/Ilustracion.png" alt="Ilustracion">
+                <img src="../img/ilustracion.jpg" alt="Ilustracion">
                 <div class="capa">
                     <h3>Animaciones e Ilustraciones Personalizadas.</h3>
                     <h5>En nuestro equipo contamos  con un ilustrador y animador profesional, que va ayudarte a darle vida a ese proyecto que anda dando vueltas en tu cabeza hace tiempo y que ya es momento de mostrárselo al mundo. </h5>
@@ -100,7 +96,7 @@
                 </div>
               </figure>
               <figure class="Imagen__Servicios Imagen__Servicios--img4">
-                <img src="../img/asesoria.png" alt="Asesoria">
+                <img src="../img/asesoria.jpg" alt="Asesoria">
                 <div class="capa">
                     <h3> Asesoría en Producción de Video.</h3>
                     <h5>Sabes que queres empezar a crear contenido en video e incluso tenes claro de tematicas vas a hablar pero ¿no sabes muy bien por donde empezar?</h5>
