agregue keywords a mi index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="productora, audiovisual, productores, contenidos, ideas, emprendedores, animaciones, videos, edicion" > 
     <!-- Favicon -->
 
     <title>thotproducciones.com</title>
@@ -54,11 +55,11 @@
                 <video src="./img/Animacion_thot.m4v" alt="videoPresentacion" autoplay muted
                     class="videoPresentacion"></video>
             <!-- -----------------------------título presentación-------------------------------->
-            <div class="primeraSeccion__titulo container-fluid">
+            <div class="primeraSeccion__titulo">
                 <h1>VOLVEMOS REALIDAD TUS IDEAS</h1>
             </div>
             <!-- -----------------------------párrafo presentación-------------------------------->
-            <div class="primeraSeccion__parrafo m-5 container-fluid">
+            <div class="primeraSeccion__parrafo m-5">
                 <p> Somos productores de contenidos audiovisuales y <strong> ayudamos a marcas personales, profesionales
                         y emprendedores a desarrollar, planificar, producir y editar videos </strong> para redes
                     sociales y plataformas digitales, en las diferentes etapas de producción.</p>
@@ -71,7 +72,7 @@
             </div>
         </section>
         <!-- ------------------------------------SEGUNDA SECCIÓN------------------------------------------- -->
-        <div class="grillaSegundaSeccion container-fluid">
+        <div class="grillaSegundaSeccion">
             <div class="h2">
                 <h2> ÚLTIMO LANZAMIENTO</h2>
             </div>
