--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -48,8 +48,8 @@
             </div>
         </nav>        
     </header>
-    <main>
-        <img src="../img/banner_thot_producciones.jpg" alt="banner_thot_producciones" class="banner">
+    <main class="mainServicios">
+        <img src="../img/banner_thot_producciones.jpg" alt="banner_thot_producciones" class="mainServicios__banner">
         <h1 class="mt-5 ms-4 tituloServicios">NUESTROS SERVICIOS</h1>
         <div class="container">
             <div class="row row-cols-2 mx-5">
