--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,13 +21,15 @@
     <!-- CSS externo -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <!-- INICIO DEL HEADER -->
     <header class="container-fluid header">
         <!-- barra de navegacion -->
         <nav class="navbar navbar-expand-sm navbar-light border-3 header__menu">
             <div class="container-fluid">
-                <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones" class="navbar-brand header__logo"></a>
+                <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones"
+                        class="navbar-brand header__logo"></a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegable">
                     <span class="navbar-toggler-icon bg-light"></span>
                 </button>
@@ -38,17 +41,87 @@
                         <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTO</a></li>
                     </ul>
                     <ul class="navbar-nav ms-3 header__link--redesSociales">
-                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i
+                                    class="fab fa-facebook"></i></a></i></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i
+                                    class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i
+                                    class="fab fa-youtube"></i></a></li>
                     </ul>
                 </div>
             </div>
-        </nav>        
+        </nav>
     </header>
-    <footer>
+    <main class="mainEmpresa">
+        <div>
+            <img src="../img/banner_nosotrxs.jpg" alt="banner_thot_miembros" class="mainEmpresa__banner">
+        </div>
+        <section class="section1">
+            <h1>SOBRE THOT</h1>
+            <h4>Thot Producciones es un equipo de trabajo conformado por 4 productores audiovisuales que nació a
+                mediados de 2019. </h4>
+            <h4>Thot se fundo con un objetivo muy claro:</h4>
+            <h4>Ayudar a emprendedores, profesionales y marcas personales a comunicar, planificar, producir y editar
+                contenidos audiovisuales para redes sociales.</h4>
+            <h4>Entendemos la importancia de tener presencia en las plataformas digitales para posicionar y destacar
+                como profesionales. Así como también para promocionar proyectos o para vender productos o servicios
+                informativos o educativos a través de internet. </h4>
+            <h4>Es por eso que queremos compartir nuestra experiencia, conocimiento y habilidades para ayudarte a
+                compartir con el mundo tus ideas, mensajes y trabajo para poder conectar de forma profesional con tu
+                publico objetivo.</h4>
+            <h4>Las producciones audiovisuales hoy mas que nunca son las herramientas de comunicación mas poderosas
+                que hay para dar visibilidad y alcance a proyectos personales como laborales. </h4>
+            <h4>Los videos hoy se convirtieron en esa famosa carta de presentación, pero en el mundo digital y
+                nosotros te podemos ayudar a construirla. </h4>
+        </section>
+        <section class="section2">
+            <h4> EQUIPO THOT</h4>
+            <div class="row integrantes">
+                <div class="col">
+                    <img src="https://static.wixstatic.com/media/5e471f_ff39920c32b7485b8a6211256b1711b9~mv2.jpg/v1/fill/w_216,h_208,al_c,q_80,usm_0.66_1.00_0.01/Laura%20Valenzuela%20.webp" alt="imagenMiembrothot" class="integrantes__imagen__Laura">
+                    <h5>Laura Valenzuela</h5>
+                    <a class="nav-link" href="https://www.instagram.com/lao_val/"><i class="fab fa-instagram"></i></a>
+                    <p>Productora Audiovisual/Guionista/ Creadora de Contenidos/ Coordinadora de proyectos.</p>
+                </div>
+                <div class="col">
+                    <img src="https://static.wixstatic.com/media/5e471f_81ecd535661442d99ecf7cfc47eb3470~mv2.jpg/v1/crop/x_0,y_114,w_960,h_963/fill/w_216,h_212,al_c,q_80,usm_0.66_1.00_0.01/Solange%20Martin.webp" alt="imagenMiembrothot" class="integrantes__imagen__Sol">
+                    <h5>Solange Martin</h5>
+                    <a class="nav-link" href="https://www.instagram.com/solchu_martin/"><i class="fab fa-instagram"></i></a>
+                    <p>Productora Audiovisual/ Sonidista/ Editora/Diseño Grafico.</p>
+                </div>
+                <div class="col">
+                    <img src="https://static.wixstatic.com/media/5e471f_48cc4fc315e948afa1ec1fe67dfe076d~mv2.jpg/v1/crop/x_0,y_25,w_721,h_721/fill/w_216,h_212,al_c,q_80,usm_0.66_1.00_0.01/Jose%20Pe%C3%B1aloza%20.webp" alt="imagenMiembrothot" class="integrantes__imagen__Sol">
+                    <h5>Jose peñaloza</h5>
+                    <a class="nav-link" href="https://www.instagram.com/jotailustrador/"><i class="fab fa-instagram"></i></a>
+                    <p>Productor Audiovisual / Animador/Ilustrador/Editor.</p>
+                </div>
+                <div class="col">
+                    <img src="https://static.wixstatic.com/media/5e471f_c84dde8d1e1948d4a9bf8025c503490d~mv2.jpg/v1/crop/x_0,y_0,w_810,h_900/fill/w_203,h_216,al_c,q_80,usm_0.66_1.00_0.01/Camila%20Caceres.webp" alt="imagenMiembrothot" class="integrantes__imagen__Sol">
+                    <h5>Camila Caceres</h5>
+                    <a class="nav-link" href="https://www.instagram.com/kmicace/"><i class="fab fa-instagram"></i></a>
+                    <p>Productor Audiovisual / Animador/Ilustrador/Editor.</p>
+                </div>
+            </div>
+            
+        </section>
+    </main>
+    <!-- INICIO DEL FOOTER -->
+    <footer class="footer">
+        <!--------------------------------------redes sociales-------------------------------------------------->
+        <ul>
+            <nav>
+                <li><a href="https://www.instagram.com/th0tproducciones">INSTAGRAM</a></li>
+                <li><a href="https://www.facebook.com/th0tproducciones">FACEBOOK</a></li>
+                <li><a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ">YOUTUBE</a></li>
+            </nav>
+        </ul>
+        <!-- -------------------------------------copyright----------------------------------------------------->
+        &copy;2021thotproducciones
+    </footer>
+    <!-- FINAL DEL FOOTER -->
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </footer>
 </body>
+
 </html>
