--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,14 +20,16 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS externo -->
     <link rel="stylesheet" href="../css/style.css">
- </head>
- <body>
+</head>
+
+<body>
     <!-- INICIO DEL HEADER -->
     <header class="container-fluid header">
         <!-- barra de navegacion -->
         <nav class="navbar navbar-expand-sm navbar-light border-3 header__menu">
             <div class="container-fluid">
-                <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones" class="navbar-brand header__logo"></a>
+                <a href="../index.html"><img src="../img/logo_thot_producciones.png" alt="logothotproducciones"
+                        class="navbar-brand header__logo"></a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegable">
                     <span class="navbar-toggler-icon bg-light"></span>
                 </button>
@@ -38,12 +41,28 @@
                         <li class="nav-item"><a class="nav-link" href="./contacto.html">CONTACTO</a></li>
                     </ul>
                     <ul class="navbar-nav ms-3 header__link--redesSociales">
-                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i
+                                    class="fab fa-facebook"></i></a></i></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i
+                                    class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i
+                                    class="fab fa-youtube"></i></a></li>
                     </ul>
                 </div>
             </div>
-        </nav>        
+        </nav>
     </header>
- </body>
+    <main class="mainEmpresa">
+        <img src="../img/banner_thot.jpg" alt="banner_thot" class="mainEmpresa__imagen">
+        <h1>PROYECTOS</h1>
+        <h3>Documentales</h3>
+        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojo7WMN3NM-l6ua-MaKFMXDK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3>Mini Series</h3>
+        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojo1-MOv_i10LVUFPeSV4nrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3>Cortometrajes</h3>
+        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojrl3luF5DJRbhP8DMGgO77K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3>Animaciones</h3>
+        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojop_LOeGmsxbn3zMxfWTp5S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
+</body>
