modifique estilo  pagina proyecto

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -56,13 +56,34 @@
     <main class="mainEmpresa">
         <img src="../img/banner_thot.jpg" alt="banner_thot" class="mainEmpresa__imagen">
         <h1>PROYECTOS</h1>
-        <h3>Documentales</h3>
-        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojo7WMN3NM-l6ua-MaKFMXDK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h3>Mini Series</h3>
-        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojo1-MOv_i10LVUFPeSV4nrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h3>Cortometrajes</h3>
-        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojrl3luF5DJRbhP8DMGgO77K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h3>Animaciones</h3>
-        <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojop_LOeGmsxbn3zMxfWTp5S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="container">
+            <h3>Documentales</h3>
+            <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojo7WMN3NM-l6ua-MaKFMXDK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="container">
+            <h3>Mini Series</h3>
+            <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojo1-MOv_i10LVUFPeSV4nrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="container">
+            <h3>Cortometrajes</h3>
+            <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojrl3luF5DJRbhP8DMGgO77K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="container">
+            <h3>Animaciones</h3>
+            <iframe width="90%" height="315" src="https://www.youtube.com/embed/videoseries?list=PLrdMhH6x1Ojop_LOeGmsxbn3zMxfWTp5S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </main>
+    <footer class="footer">
+        <!--------------------------------------redes sociales-------------------------------------------------->
+        <ul>
+            <nav>
+                <li><a href="https://www.instagram.com/th0tproducciones">INSTAGRAM</a></li>
+                <li><a href="https://www.facebook.com/th0tproducciones">FACEBOOK</a></li>
+                <li><a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ">YOUTUBE</a></li>
+            </nav>
+        </ul>
+        <!-- -------------------------------------copyright----------------------------------------------------->
+        &copy;2021thotproducciones
+    </footer>
+    <!-- FINAL DEL FOOTER -->
 </body>
