--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -59,23 +59,25 @@
         </div>
         <section class="section1">
             <h1>SOBRE THOT</h1>
-            <h4>Thot Producciones es un equipo de trabajo conformado por 4 productores audiovisuales que nació a
-                mediados de 2019. </h4>
-            <h4>Thot se fundo con un objetivo muy claro:</h4>
-            <h4>Ayudar a emprendedores, profesionales y marcas personales a comunicar, planificar, producir y editar
-                contenidos audiovisuales para redes sociales.</h4>
-            <h4>Entendemos la importancia de tener presencia en las plataformas digitales para posicionar y destacar
-                como profesionales. Así como también para promocionar proyectos o para vender productos o servicios
-                informativos o educativos a través de internet. </h4>
-            <h4>Es por eso que queremos compartir nuestra experiencia, conocimiento y habilidades para ayudarte a
-                compartir con el mundo tus ideas, mensajes y trabajo para poder conectar de forma profesional con tu
-                publico objetivo.</h4>
-            <h4>Las producciones audiovisuales hoy mas que nunca son las herramientas de comunicación mas poderosas
-                que hay para dar visibilidad y alcance a proyectos personales como laborales. </h4>
-            <h4>Los videos hoy se convirtieron en esa famosa carta de presentación, pero en el mundo digital y
-                nosotros te podemos ayudar a construirla. </h4>
+            <div class="container">
+                <h4>Thot Producciones es un equipo de trabajo conformado por 4 productores audiovisuales que nació a
+                    mediados de 2019. </h4>
+                <h4> <strong>Thot se fundo con un objetivo muy claro:</strong></h4>
+                <h4>Ayudar a emprendedores, profesionales y marcas personales a comunicar, planificar, producir y editar
+                    contenidos audiovisuales para redes sociales.</h4>
+                <h4>Entendemos la importancia de tener presencia en las plataformas digitales para posicionar y destacar
+                    como profesionales. Así como también para promocionar proyectos o para vender productos o servicios
+                    informativos o educativos a través de internet. </h4>
+                <h4>Es por eso que queremos compartir nuestra experiencia, conocimiento y habilidades para ayudarte a
+                    compartir con el mundo tus ideas, mensajes y trabajo para poder conectar de forma profesional con tu
+                    publico objetivo.</h4>
+                <h4>Las producciones audiovisuales hoy mas que nunca son las herramientas de comunicación mas poderosas
+                    que hay para dar visibilidad y alcance a proyectos personales como laborales. </h4>
+                <h4>Los videos hoy se convirtieron en esa famosa carta de presentación, pero en el mundo digital y
+                    nosotros te podemos ayudar a construirla. </h4>
+            </div>
         </section>
-        <section class="section2">
+        <section class="section2 container">
             <h4> EQUIPO THOT</h4>
             <div class="row integrantes">
                 <div class="col">
@@ -100,7 +102,7 @@
                     <img src="https://static.wixstatic.com/media/5e471f_c84dde8d1e1948d4a9bf8025c503490d~mv2.jpg/v1/crop/x_0,y_0,w_810,h_900/fill/w_203,h_216,al_c,q_80,usm_0.66_1.00_0.01/Camila%20Caceres.webp" alt="imagenMiembrothot" class="integrantes__imagen__Sol">
                     <h5>Camila Caceres</h5>
                     <a class="nav-link" href="https://www.instagram.com/kmicace/"><i class="fab fa-instagram"></i></a>
-                    <p>Productor Audiovisual / Animador/Ilustrador/Editor.</p>
+                    <p>Productora Audiovisual/ Directora/ Guionista/Editora.</p>
                 </div>
             </div>
             
