agregue mixin grid, pase index y servicios a scss

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,9 +10,7 @@
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&family=Vollkorn:ital,wght@1,400;1,500;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&family=Poppins:wght@400;500;700&family=Vollkorn:ital,wght@1,400;1,500;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/95394413ce.js" crossorigin="anonymous"></script>
     <!-- CSS bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -50,7 +48,7 @@
     <main class="mainServicios">
         <img src="../img/banner_thot_producciones.jpg" alt="banner_thot_producciones" class="mainServicios__banner">
         <h1 class="mt-5 ms-4 tituloServicios">NUESTROS SERVICIOS</h1>
-        <div class="container">
+        <div class="container mainServicios__container">
             <div class="row row-cols-2 mx-5">
               <figure class="Imagen__Servicios Imagen__Servicios--img1" >
                 <img src="../img/edicion.jpg" alt="Edicion">
