--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="productora, audiovisual, productores, contenidos, ideas, emprendedores, animaciones, videos, edicion" > 
+    <meta name="keywords"
+        content="productora, audiovisual, productores, contenidos, ideas, emprendedores, animaciones, videos, edicion">
     <!-- Favicon -->
 
     <title>thotproducciones.com</title>
@@ -28,7 +30,8 @@
         <!-- barra de navegacion -->
         <nav class="navbar navbar-expand-sm navbar-light border-3 header__menu">
             <div class="container-fluid">
-                <a href="index.html"><img src="./img/logo_thot_producciones.png" alt="logothotproducciones" class="navbar-brand header__logo"></a>
+                <a href="index.html"><img src="./img/logo_thot_producciones.png" alt="logothotproducciones"
+                        class="navbar-brand header__logo"></a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegable">
                     <span class="navbar-toggler-icon bg-light"></span>
                 </button>
@@ -40,74 +43,79 @@
                         <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">CONTACTO</a></li>
                     </ul>
                     <ul class="navbar-nav ms-3 header__link--redesSociales">
-                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i class="fab fa-facebook"></i></a></i></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i class="fab fa-instagram"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i class="fab fa-youtube"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/th0tproducciones"><i
+                                    class="fab fa-facebook"></i></a></i></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/th0tproducciones"><i
+                                    class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ"><i
+                                    class="fab fa-youtube"></i></a></li>
                     </ul>
                 </div>
             </div>
-        </nav>        
+        </nav>
     </header>
     <!-- FINAL DEL HEADER -->
     <!---------------------------------------PRIMERA SECCIÓN------------------------------------------->
-        <section class="primeraSeccion container-fluid">
-            <!-------------------------------------video presentación---------------------------->
-                <video src="./img/Animacion_thot.m4v" alt="videoPresentacion" autoplay muted
-                    class="videoPresentacion"></video>
-            <!-- -----------------------------título presentación-------------------------------->
-            <div class="primeraSeccion__titulo">
-                <h1>VOLVEMOS REALIDAD TUS IDEAS</h1>
-            </div>
-            <!-- -----------------------------párrafo presentación-------------------------------->
-            <div class="primeraSeccion__parrafo m-5">
-                <p> Somos productores de contenidos audiovisuales y <strong> ayudamos a marcas personales, profesionales
-                        y emprendedores a desarrollar, planificar, producir y editar videos </strong> para redes
-                    sociales y plataformas digitales, en las diferentes etapas de producción.</p>
-                <p> Podemos ofrecerte los siguientes servicios: 
-                        <li>👉Asesoría en Producción de videos.</li>
-                        <li>👉Producción de Identidad Gráfica para tus videos.</li>
-                        <li>👉Animaciones e ilustraciones personalizadas para tus proyectos.</li>
-                        <li>👉Y servicios de edición y posproducción del material audiovisual.</li>
-                </p>
-            </div>
-        </section>
-        <!-- ------------------------------------SEGUNDA SECCIÓN------------------------------------------- -->
-        <div class="grillaSegundaSeccion">
-            <div class="h2">
-                <h2> ÚLTIMO LANZAMIENTO</h2>
-            </div>
-            <div class="h3">
-                <h3 class=TituloArte>ARTE CON LO QUE HAY EN CASA</h3>
-            </div>
-            <div class="p">
-                <p class="parrafoArte">🎨“Arte Con Lo Que Hay En Casa" es un taller virtual que invita a las infancias a
-                    explorar la
-                    imaginación, el juego, la creatividad y los sentidos a través del arte y el reciclaje. 🌎</p>
-            </div>
-            <div class="iframe">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/BAuqFq01SVU"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
+    <section class="primeraSeccion container-fluid">
+        <!-------------------------------------video presentación---------------------------->
+        <video src="./img/Animacion_thot.m4v" alt="videoPresentacion" autoplay muted class="videoPresentacion"></video>
+        <!-- -----------------------------título presentación-------------------------------->
+        <div class="primeraSeccion__titulo">
+            <h1>VOLVEMOS REALIDAD TUS IDEAS</h1>
         </div>
-        </section>
-        <!-- INICIO DEL FOOTER -->
-        <footer class="footer">
-            <!--------------------------------------redes sociales-------------------------------------------------->
-            <ul>
-                <nav>
-                    <li><a href="https://www.instagram.com/th0tproducciones">INSTAGRAM</a></li>
-                    <li><a href="https://www.facebook.com/th0tproducciones">FACEBOOK</a></li>
-                    <li><a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ">YOUTUBE</a></li>
-                </nav>
-            </ul>
-            <!-- -------------------------------------copyright----------------------------------------------------->
-            &copy;2021thotproducciones
-        </footer>
-        <!-- FINAL DEL FOOTER -->
-        <!-- Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <!-- -----------------------------párrafo presentación-------------------------------->
+        <div class="primeraSeccion__parrafo m-5">
+            <p class="primeraSeccion__parrafo primeraSeccion__parrafo--principal"  > Somos productores de contenidos audiovisuales y <strong> ayudamos a marcas personales, profesionales
+                    y emprendedores a desarrollar, planificar, producir y editar videos </strong> para redes
+                sociales y plataformas digitales, en las diferentes etapas de producción.</p>
+            <p class="primeraSeccion__parrafo primeraSeccion__parrafo--secundario" > PODEMOS OFRECERTE LOS SIGUIENTES SERVICIOS:
+                <li>👉Asesoría en Producción de videos.</li>
+                <li>👉Producción de Identidad Gráfica para tus videos.</li>
+                <li>👉Animaciones e ilustraciones personalizadas para tus proyectos.</li>
+                <li>👉Y servicios de edición y posproducción del material audiovisual.</li>
+            </p>
+        </div>
+    </section>
+    <!-- ------------------------------------SEGUNDA SECCIÓN------------------------------------------- -->
+    <div class="grillaSegundaSeccion">
+        <div class="h2">
+            <h2> ÚLTIMO LANZAMIENTO</h2>
+        </div>
+        <div class="h3">
+            <h3 class=TituloArte>ARTE CON LO QUE HAY EN CASA</h3>
+        </div>
+        <div class="p">
+            <p class="parrafoArte">🎨“Arte Con Lo Que Hay En Casa" es un taller virtual que invita a las infancias a
+                explorar la
+                imaginación, el juego, la creatividad y los sentidos a través del arte y el reciclaje. 🌎</p>
+        </div>
+        <div class="iframe">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/BAuqFq01SVU"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </div>
+    </section>
+    <!-- INICIO DEL FOOTER -->
+    <footer class="footer">
+        <!--------------------------------------redes sociales-------------------------------------------------->
+        <ul>
+            <nav>
+                <li><a href="https://www.instagram.com/th0tproducciones">INSTAGRAM</a></li>
+                <li><a href="https://www.facebook.com/th0tproducciones">FACEBOOK</a></li>
+                <li><a href="https://www.youtube.com/channel/UCcQI1GKMHL-ODEVv3jm2jXQ">YOUTUBE</a></li>
+            </nav>
+        </ul>
+        <!-- -------------------------------------copyright----------------------------------------------------->
+        &copy;2021thotproducciones
+    </footer>
+    <!-- FINAL DEL FOOTER -->
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
