modifique pagina empresa y contacto

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -83,7 +83,7 @@
                 <img src="../img/ilustracion.jpg" alt="Ilustracion">
                 <div class="capa">
                     <h3>Animaciones e Ilustraciones Personalizadas.</h3>
-                    <h5>En nuestro equipo contamos  con un ilustrador y animador profesional, que va ayudarte a darle vida a ese proyecto que anda dando vueltas en tu cabeza hace tiempo y que ya es momento de mostrárselo al mundo. </h5>
+                    <h5>Nuestro ilustrador y animador profesional, va a ayudarte a darle vida a ese proyecto que anda dando vueltas en tu cabeza hace tiempo ¡ya es momento de mostrárselo al mundo!. </h5>
                     <li>Construcción y animación de personajes.</li>
                     <li>Cuentos animados. </li>
                     <li>Stop Motion.</li>
@@ -96,7 +96,7 @@
                 <img src="../img/asesoria.jpg" alt="Asesoria">
                 <div class="capa">
                     <h3> Asesoría en Producción de Video.</h3>
-                    <h5>Sabes que queres empezar a crear contenido en video e incluso tenes claro de tematicas vas a hablar pero ¿no sabes muy bien por donde empezar?</h5>
+                    <h5>Tengo una idea y quiero crear contenido pero ¿por dónde empiezo?</h5>
                     <li>Te vamos a guiar para que puedas armar tus propios guiones.</li>
                     <li>Armar un cronograma/plan de grabación.</li>
                     <li>Definir tu escena de grabación y que detalles tenes que tener en cuenta.</li>
