--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     <!-- CSS bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Nuestro CSS externo -->
+    <!-- CSS externo -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -75,7 +75,7 @@
             </form>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
         <nav>
             <a href="https://www.instagram.com/th0tproducciones/">INSTAGRAM</a>
             <a href="https://www.facebook.com/th0tproducciones">FACEBOOK</a>
