--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="productora, audiovisual, productores, contenidos, ideas, emprendedores, animaciones, videos, edicion">
-    <!-- Favicon -->
-
     <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
