--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon -->
-
+    <meta name="keywords"
+        content="servicios, productora, audiovisual, asesoria, ayuda, ideas, emprendedores, animaciones, videos, edicion">
     <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
