--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon -->
-
+    <meta name="keywords"
+        content="contacto, mail, nombre, mensaje, thot, producciones, productora, audiovisual, cantactanos">
     <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
