agregue description a mis html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="productora, audiovisual, productores, contenidos, ideas, emprendedores, animaciones, videos, edicion">
+    <meta name="description"
+        content="Somos una productora audiovisual que ayuda a emprendedores, profesionales y marcas a desarrollar sus ideas y elevar el nivel de su identidad visual para posicionarse en las plataformas digitales. ">
     <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
