--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="contacto, mail, nombre, mensaje, thot, producciones, productora, audiovisual, cantactanos">
+        <meta name="description"
+        content="¡Trabajemos juntos! Contactanos y contanos sobre tu proyecto">
     <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
