--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="productora, audiovisual, productores, equipo, ideas, emprendedores, proyectos, plataformas, profesionales">
-    <title>thotproducciones.com</title>
+        <meta name="description"
+        content="Thot producciones nace para ayudarte a comunicar tus ideas. Las plataformas digitales se convirtieron en tu mayor carta de presentacion y nosotros te podemos ayudar a construirla">
+        <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
