--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="proyectos, productora, audiovisual, Documentales, cortometrajes, miniseries, animaciones, videos, youtube">
-    <title>thotproducciones.com</title>
+    <meta name="description"
+        content="Conoce nuestros proyectos. Documentales, miniseries, cortometrajes, animaciones y muchos mas!">
+        <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
