--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="servicios, productora, audiovisual, asesoria, ayuda, ideas, emprendedores, animaciones, videos, edicion">
-    <title>thotproducciones.com</title>
+    <meta name="description"
+        content="Nuestros Servicios. Edicion de video, identidad grafica, ilustracion y animacion personalizada, asesoria en produccion">
+        <title>thotproducciones.com</title>
     <!-- Fuentes externas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
